log
Fri Apr  8 01:36:25 UTC 2022: 
 tests:  0|6
total_score: 0/70
ffb95e0
Fri Apr  8 15:22:34 UTC 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘i’ undeclared (first use in this function)
   for(i=0 ; i<capacity ; i++)
       ^
hashmap.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:61:8: error: ‘buckets’ undeclared (first use in this function)
   mapa-buckets[i] = NULL;
        ^~~~~~~
hashmap.c:65:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
acb8e05
Fri Apr  8 15:22:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘i’ undeclared (first use in this function)
   for(i=0 ; i<capacity ; i++)
       ^
hashmap.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
79b41ee
Fri Apr  8 15:24:30 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘i’ undeclared (first use in this function)
   for(i=0 ; i<capacity ; i++)
       ^
hashmap.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:64:10: error: expected expression before ‘HashMap’
   return HashMap;
          ^~~~~~~
hashmap.c:65:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
fa95067
Fri Apr  8 15:25:11 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:3: error: ‘i’ undeclared (first use in this function)
   i = 0;
   ^
hashmap.c:57:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:10: error: expected expression before ‘HashMap’
   return HashMap;
          ^~~~~~~
hashmap.c:66:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
fff7d38
Fri Apr  8 15:25:23 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:65:10: error: expected expression before ‘HashMap’
   return HashMap;
          ^~~~~~~
hashmap.c:66:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
edf76ff
Fri Apr  8 15:26:00 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c20e20f
Fri Apr  8 15:35:47 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:10: error: too few arguments to function ‘hash’
 indice = hash(key)
          ^~~~
hashmap.c:26:6: note: declared here
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:47:1: error: expected ‘;’ before ‘}’ token
 }
 ^
hashmap.c:44:5: error: variable ‘indice’ set but not used [-Werror=unused-but-set-variable]
 int indice;
     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
324d568
Fri Apr  8 15:35:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:10: error: too few arguments to function ‘hash’
 indice = hash(key);
          ^~~~
hashmap.c:26:6: note: declared here
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:44:5: error: variable ‘indice’ set but not used [-Werror=unused-but-set-variable]
 int indice;
     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6149a35
Fri Apr  8 15:52:36 UTC 2022: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:7: error: too few arguments to function ‘hash’
 pos = hash(key);
       ^~~~
hashmap.c:26:6: note: declared here
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:47:5: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
 if(!mapa->buckets[pos]){
     ^~~~
     map
hashmap.c:47:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:1: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
 else
 ^~~~
hashmap.c:58:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   mapa->buckets[pos] = value;
   ^~~~
hashmap.c:62:1: error: expected ‘;’ before ‘}’ token
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
405e402
